--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "keywords": [
     "ynw",
-    "yueniu"
+    "yueniu",
+    "puppeteer",
+    "chrome",
+    "SEO"
   ],
   "author": "",
   "bin": {
